--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
           <button class="keyboard-button">L</button>
         </div>
       </div>
+
+      <div id="plugboard">
+        <div id="plugboard-row-1" class="plugboard-row">
+          <div class="plugboard-item">
+            <div class="plugboard-item--letter">Q</div>
+            <div class="plugboard-item--socket">
+              <div class="plugboard-item--socket--top">
+              </div>
+              <div class="plugboard-item--socket--bottom">
+              </div>
+              <div class="plugboard-item--socket--plug">
+                <div class="plugboard-item--socket--plug--dot">&nbsp;</div>
+              </div>
+            </div>
+            <div class="plugboard-item--number">17</div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
